[package]
name = "mvc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib/mod.rs"

[dependencies]
rouille = "3.6.1"
tinytemplate = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.17"
env_logger = "0.10.0"